--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "testweb",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
+  "engine": "14.x",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start":"app.js",
